@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-11T16:12:35Z",
-  "count_outdated" : 1385,
-  "uniques_outdated" : 750,
+  "timestamp" : "2023-10-12T00:41:06Z",
+  "count_outdated" : 1387,
+  "uniques_outdated" : 751,
   "count" : 1412,
   "uniques" : 765,
   "clones" : [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 2,
