@@ -1,3 +1,12 @@
+2023-10-12T00:41:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6489725864 # 1982
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 750 1385 / 765 1412
+* notice: next accum: outdated-unq outdated-all / unq all: 751 1387 / 765 1412
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-27] / []
+
 2023-10-11T16:12:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6485202252 # 1981
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
